cluster/apps/drive/filerun/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun-db
  namespace: drive
  labels:
    service: filerun-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: filerun-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: filerun-db
    spec:
      containers:
        - name: filerun-db
          image: mariadb:12.3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: filerun-db-pvc
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      volumes:
        - name: filerun-db-pvc
          persistentVolumeClaim:
            claimName: filerun-db-pvc
