cluster/apps/drive/filerun/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun-web
  namespace: drive
  labels:
    service: filerun-web
spec:
  selector:
    matchLabels:
      service: filerun-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: filerun-web
    spec:
      containers:
        - name: filerun-web
          image: filerun/filerun:8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "256Mi"
          volumeMounts:
            - mountPath: /var/www/html
              name: filerun-web-html-pvc
            - mountPath: /user-files
              name: filerun-web-userfiles-pvc
      nodeSelector:
        kubernetes.io/hostname: nuc7pjyhn
      restartPolicy: Always
      volumes:
        - name: filerun-web-html-pvc
          persistentVolumeClaim:
            claimName: filerun-web-html-pvc
        - name: filerun-web-userfiles-pvc
          persistentVolumeClaim:
            claimName: filerun-web-userfiles-pvc
