cluster/apps/drive/filerun/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun-db
  namespace: drive
  labels:
    service: filerun-db
spec:
  ports:
    - name: "mysql"
      port: 3306
      targetPort: 3306
  selector:
    service: filerun-db
